2006-08-27 [colin]	2.4.0cvs97

	* src/msgcache.c
		Disable mmaped caches - huge metadata loss
		here after a power failure.
	* src/summaryview.c
		Add quicksearch timing
	* src/common/plugin.c
	* src/common/plugin.h
		Implement an interface to tell what plugins
		provide. Prevent loading of similar plugins.
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/demo/demo.c
	* src/plugins/dillo_viewer/dillo_viewer.c
	* src/plugins/pgpcore/plugin.c
	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/pgpmime/pgpmime.c
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/trayicon/trayicon.c
		Implement plugin_provides()

2006-08-27 [colin]	2.4.0cvs96

	* configure.ac
	* src/plugins/Makefile.am
	* src/plugins/bogofilter/.cvsignore
	* src/plugins/bogofilter/Makefile.am
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter.h
	* src/plugins/bogofilter/bogofilter_gtk.c
		New Bogofilter plugin, provides filtering and
		learning. Spamassassin will go to extra plugins.

2006-08-26 [mones]	2.4.0cvs95

	* manual/handling.xml
		Fix subfolder path in the example (thanks to Paul) 

2006-08-26 [mones]	2.4.0cvs94

	* manual/glossary.xml
		2.2. + add ISP to the glossary
		7.5. + Add UIDL to glossary
		7.7. + Add TCP to glossary
	* manual/handling.xml
		7.1. + Mentions GNU/Linux distribution, what about the non...
		7.2. = s/html/HTML/, quote --local option -> Dillo HTML Viewer
		7.3. + Mentions .bashrc, what about the non-bash ones? 
		7.4. = Use appropriate quotation for commands
		7.6. = change "" to <quote></quote>
	* manual/plugins.xml
		6.1. + Example #mh/Mailbox/Friends -> #mh/inbox/Friends		
	* manual/starting.xml
		2.1. + local mbox file: some examples of mbox file locations...
		Also reformatted files requiring it

2006-08-26 [wwp]	2.4.0cvs93

	* src/summary_search.c
		disable find buttons while summary search is running.

2006-08-25 [colin]	2.4.0cvs92

	* src/folder.c
	* src/folderutils.c
	* src/mh.c
	* src/procmsg.h
	* src/summaryview.c