@@ -1789,3 +1789,4 @@
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 manual/handling.xml;  ) > 2.4.0cvs95.patchset
 ( cvs diff -u -r 1.654.2.1834 -r 1.654.2.1835 configure.ac;  cvs diff -u -r 1.8.2.5 -r 1.8.2.6 src/plugins/Makefile.am;  diff -u /dev/null src/plugins/bogofilter/.cvsignore;  diff -u /dev/null src/plugins/bogofilter/Makefile.am;  diff -u /dev/null src/plugins/bogofilter/bogofilter.c;  diff -u /dev/null src/plugins/bogofilter/bogofilter.h;  diff -u /dev/null src/plugins/bogofilter/bogofilter_gtk.c;  ) > 2.4.0cvs96.patchset
 ( cvs diff -u -r 1.16.2.37 -r 1.16.2.38 src/msgcache.c;  cvs diff -u -r 1.395.2.235 -r 1.395.2.236 src/summaryview.c;  cvs diff -u -r 1.13.2.19 -r 1.13.2.20 src/common/plugin.c;  cvs diff -u -r 1.5.2.6 -r 1.5.2.7 src/common/plugin.h;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/common/timing.h;  cvs diff -u -r 1.13.2.22 -r 1.13.2.23 src/plugins/clamav/clamav_plugin.c;  cvs diff -u -r 1.13.2.7 -r 1.13.2.8 src/plugins/demo/demo.c;  cvs diff -u -r 1.12.2.13 -r 1.12.2.14 src/plugins/dillo_viewer/dillo_viewer.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/plugins/pgpcore/plugin.c;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/plugins/pgpinline/pgpinline.c;  cvs diff -u -r 1.1.2.37 -r 1.1.2.38 src/plugins/pgpmime/pgpmime.c;  cvs diff -u -r 1.18.2.36 -r 1.18.2.37 src/plugins/spamassassin/spamassassin.c;  cvs diff -u -r 1.14.2.36 -r 1.14.2.37 src/plugins/trayicon/trayicon.c;  ) > 2.4.0cvs97.patchset
+( cvs diff -u -r 1.382.2.304 -r 1.382.2.305 src/compose.c;  cvs diff -u -r 1.94.2.99 -r 1.94.2.100 src/messageview.c;  cvs diff -u -r 1.150.2.75 -r 1.150.2.76 src/procmsg.c;  cvs diff -u -r 1.60.2.33 -r 1.60.2.34 src/procmsg.h;  ) > 2.4.0cvs98.patchset
