@@ -1,3 +1,12 @@
+2006-08-27 [colin]	2.4.0cvs98
+
+	* src/compose.c
+	* src/messageview.c
+	* src/procmsg.c
+	* src/procmsg.h
+		When possible, copy the queued mail to sent folder
+		instead of re-adding. Much faster on IMAP.
+
 2006-08-27 [colin]	2.4.0cvs97
 
 	* src/msgcache.c
